fix bounce issues on iOS scroll

--- a/dkerby-web/src/App.css
+++ b/dkerby-web/src/App.css
@@ -1,7 +1,8 @@
 html {
   text-align: center;
+  position: fixed;
   height: 100%;
-  width: 100%;
+  overflow: hidden;
 }
 
 @keyframes App-logo-spin {
